ResoniteMario64/libsm64/Interop.cs

using System;
using System.Collections.Generic;
using System.Runtime.InteropServices;
using Elements.Assets;
using Elements.Core;
using ResoniteModLoader;
using static ResoniteMario64.libsm64.SM64Constants;
#if IsNet9
using Renderite.Shared;
#endif

namespace ResoniteMario64.libsm64;

public static class MarioExtensions
{
    public static float3 ToMarioRotation(this float3 rot)
    {
        return new float3(FixAngle(-rot.x), FixAngle(rot.y), FixAngle(rot.z));

        float Fmod(float a, float b) => a - b * MathX.Floor(a / b);
        float FixAngle(float a) => Fmod(a + 180.0f, 360.0f) - 180.0f;
    }
    
    public static float3 FromMarioRotation(this float3 rot)
    {
        return new float3(FixAngle(-rot.x), FixAngle(rot.y), FixAngle(rot.z));

        float Fmod(float a, float b) => a - b * MathX.Floor(a / b);
        float FixAngle(float a) => Fmod(a + 180.0f, 360.0f) - 180.0f;
    }

    public static float3 ToMarioPosition(this float3 pos) => Interop.ScaleFactor * pos * new float3(-1, 1, 1);
    public static float3 FromMarioPosition(this float3 pos) => pos / Interop.ScaleFactor * new float3(-1, 1, 1);
}

internal static class Interop
{
    public static float ScaleFactor => ResoniteMario64.Config.GetValue(ResoniteMario64.KeyMarioScaleFactor);

    public const int SM64TextureWidth = 64 * 11;
    public const int SM64TextureHeight = 64;
    public const int SM64GeoMaxTriangles = 1024;

    public const float SM64HealthPerHealthPoint = 256;

    public const byte SecondsMultiplier = 40;

    public const int SM64LevelResetValue = -10000;

    // It seems a collider can't be too big, otherwise it will be ignored
    // This seems like too much of a pain to fix rn, let the future me worry about it
    public static int SM64MaxVertexDistance = 250000 * (int)ScaleFactor;

    public const float SM64Deg2Angle = 182.04459f;

    public static Bitmap2D MarioTexture { get; private set; }
    public static bool IsGlobalInit { get; private set; }
    

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    private delegate void SM64DebugPrintFunctionPtr(string message);

    private delegate void SM64PlaySoundFunctionPtr(uint soundBits, float[] pos);

    // Initialization & Setup
    [DllImport("sm64")]
    private static extern void sm64_register_debug_print_function(IntPtr debugPrintFunctionPtr);

    [DllImport("sm64")]
    private static extern void sm64_register_play_sound_function(IntPtr playSoundFunction);

    [DllImport("sm64")]
    private static extern void sm64_global_init(IntPtr rom, IntPtr outTexture);

    [DllImport("sm64")]
    private static extern void sm64_global_terminate();

    [DllImport("sm64")]
    private static extern void sm64_audio_init(IntPtr rom);

    // Audio & Music
    [DllImport("sm64")]
    private static extern uint sm64_audio_tick(uint numQueuedSamples, uint numDesiredSamples, IntPtr audioBuffer);

    [DllImport("sm64")]
    private static extern void sm64_seq_player_play_sequence(byte player, byte seqId, ushort arg2);

    [DllImport("sm64")]
    private static extern void sm64_play_music(byte player, ushort seqArgs, ushort fadeTimer);

    [DllImport("sm64")]
    private static extern void sm64_stop_background_music(ushort seqId);

    [DllImport("sm64")]
    private static extern void sm64_fadeout_background_music(ushort arg0, ushort fadeOut);

    [DllImport("sm64")]
    private static extern ushort sm64_get_current_background_music();

    [DllImport("sm64")]
    private static extern void sm64_play_sound(int soundBits, IntPtr pos);

    [DllImport("sm64")]
    private static extern void sm64_play_sound_global(int soundBits);

    [DllImport("sm64")]
    private static extern void sm64_set_sound_volume(float vol);

    // Mario Lifecycle
    [DllImport("sm64")]
    private static extern uint sm64_mario_create(float x, float y, float z);

    [DllImport("sm64")]
    private static extern void sm64_mario_tick(uint marioId, ref SM64MarioInputs inputs, ref SM64MarioState outState, ref SM64MarioGeometryBuffers outBuffers);

    [DllImport("sm64")]
    private static extern void sm64_mario_delete(uint marioId);

    // Mario Actions & Status
    [DllImport("sm64")]
    private static extern void sm64_set_mario_action(uint marioId, uint action);

    [DllImport("sm64")]
    private static extern void sm64_set_mario_action(uint marioId, uint action, uint actionArg);

    [DllImport("sm64")]
    private static extern void sm64_set_mario_state(uint marioId, uint flags);

    [DllImport("sm64")]
    private static extern void sm64_set_mario_health(uint marioId, ushort health);

    [DllImport("sm64")]
    private static extern void sm64_set_mario_invincibility(uint marioId, short timer);

    [DllImport("sm64")]
    private static extern void sm64_mario_take_damage(uint marioId, uint damage, uint subtype, float x, float y, float z);

    [DllImport("sm64")]
    private static extern void sm64_mario_heal(uint marioId, byte healCounter);

    [DllImport("sm64")]
    private static extern void sm64_mario_kill(uint marioId);

    [DllImport("sm64")]
    private static extern void sm64_mario_interact_cap(uint marioId, uint capFlag, ushort capTime, byte playMusic);

    [DllImport("sm64")]
    private static extern void sm64_mario_extend_cap(uint marioId, ushort capTime);
    
    [DllImport("sm64")]
    private static extern void sm64_set_mario_animation(uint marioId, ushort animId);

    [DllImport("sm64")]
    private static extern void sm64_set_mario_anim_frame(uint marioId, short frame);

    [DllImport("sm64")]
    [return: MarshalAs(UnmanagedType.I1)]
    private static extern bool sm64_mario_attack(uint marioId, float x, float y, float z, float hitboxHeight);

    // Mario Transform 
    [DllImport("sm64")]
    private static extern void sm64_set_mario_position(uint marioId, float x, float y, float z);

    [DllImport("sm64")]
    private static extern void sm64_set_mario_angle(uint marioId, float x, float y, float z);

    [DllImport("sm64")]
    private static extern void sm64_set_mario_faceangle(uint marioId, float y);

    [DllImport("sm64")]
    private static extern void sm64_set_mario_velocity(uint marioId, float x, float y, float z);

    [DllImport("sm64")]
    private static extern void sm64_set_mario_forward_velocity(uint marioId, float vel);

    /* Mario Environmental Effects */
    [DllImport("sm64")]
    private static extern void sm64_set_mario_water_level(uint marioId, int level);

    [DllImport("sm64")]
    private static extern void sm64_set_mario_gas_level(uint marioId, int level);

    // Static & Dynamic Surfaces
    [DllImport("sm64")]
    private static extern void sm64_static_surfaces_load(SM64Surface[] surfaces, ulong numSurfaces);

    [DllImport("sm64")]
    private static extern uint sm64_surface_object_create(ref SM64SurfaceObject surfaceObject);

    [DllImport("sm64")]
    private static extern void sm64_surface_object_move(uint objectId, ref SM64ObjectTransform transform);

    [DllImport("sm64")]
    private static extern void sm64_surface_object_delete(uint objectId);

    // Collision & Geometry Queries
    [DllImport("sm64")]
    private static extern int sm64_surface_find_wall_collision(ref float x, ref float y, ref float z, float offsetY, float radius);

    [DllImport("sm64")]
    private static extern int sm64_surface_find_wall_collisions(ref IntPtr colData);

    [DllImport("sm64")]
    private static extern float sm64_surface_find_ceil(float x, float y, float z, out IntPtr ceil);

    [DllImport("sm64")]
    private static extern float sm64_surface_find_floor(float x, float y, float z, out IntPtr floor);

    [DllImport("sm64")]
    private static extern float sm64_surface_find_floor_height(float x, float y, float z);

    [DllImport("sm64")]
    private static extern float sm64_surface_find_floor_height_and_data(float x, float y, float z, out IntPtr floorGeo);

    [DllImport("sm64")]
    private static extern float sm64_surface_find_water_level(float x, float z);

    [DllImport("sm64")]
    private static extern float sm64_surface_find_poison_gas_level(float x, float z);

    public static void GlobalInit(byte[] rom)
    {
        GCHandle romHandle = GCHandle.Alloc(rom, GCHandleType.Pinned);
        byte[] textureData = new byte[4 * SM64TextureWidth * SM64TextureHeight];
        GCHandle textureDataHandle = GCHandle.Alloc(textureData, GCHandleType.Pinned);

        sm64_global_init(romHandle.AddrOfPinnedObject(), textureDataHandle.AddrOfPinnedObject());
        sm64_audio_init(romHandle.AddrOfPinnedObject());

        // With audio this has became waaaay too spammy ;_;
        // #if DEBUG
        // var callbackDelegate = new DebugPrintFuncDelegate(DebugPrintCallback);
        // sm64_register_debug_print_function(Marshal.GetFunctionPointerForDelegate(callbackDelegate));
        // #endif
        
        MarioTexture = new Bitmap2D(SM64TextureWidth, SM64TextureHeight, TextureFormat.RGBA32, false, ColorProfile.sRGB, false);
        for (int ix = 0; ix < SM64TextureWidth; ix++)
        for (int iy = 0; iy < SM64TextureHeight; iy++)
        {
            color32 color = new color32(
                textureData[4 * (ix + SM64TextureWidth * iy) + 0],
                textureData[4 * (ix + SM64TextureWidth * iy) + 1],
                textureData[4 * (ix + SM64TextureWidth * iy) + 2],
                textureData[4 * (ix + SM64TextureWidth * iy) + 3]
            );
            // Make the 100% transparent colors white. So we can multiply with the vertex colors.
            if (color.a == 0)
            {
                color = new color32(255, 255, 255, 0);
            }

            MarioTexture.SetPixel32(ix, iy, color);
        }

        // marioTexture.Save("mario.png");

        romHandle.Free();
        textureDataHandle.Free();

        IsGlobalInit = true;
    }

    public static void GlobalTerminate()
    {
        StopMusic();
        sm64_global_terminate();
        MarioTexture = null;
        IsGlobalInit = false;
    }

    public static void PlayRandomMusic()
    {
        StopMusic();
        sm64_play_music(0, Musics[RandomX.Range(0, Musics.Length)], 0);
    }

    public static void StopMusic()
    {
        // Stop all music that was queued
        while (sm64_get_current_background_music() is var currentMusic && currentMusic != (ushort)MusicSequence.None)
        {
            sm64_stop_background_music(currentMusic);
        }
    }

    public static void StaticSurfacesLoad(SM64Surface[] surfaces)
    {
        ResoniteMod.Debug($"Reloading all static collider surfaces - Total Polygons: {surfaces.Length}");
        sm64_static_surfaces_load(surfaces, (ulong)surfaces.Length);
    }

    public static uint MarioCreate(float3 marioPos) => sm64_mario_create(marioPos.x, marioPos.y, marioPos.z);

    public static SM64MarioState MarioTick(uint marioId, SM64MarioInputs inputs, float3[] positionBuffer, float3[] normalBuffer, float3[] colorBuffer, float2[] uvBuffer, out ushort numTrianglesUsed)
    {
        SM64MarioState outState = new SM64MarioState();

        GCHandle posHandle = GCHandle.Alloc(positionBuffer, GCHandleType.Pinned);
        GCHandle normHandle = GCHandle.Alloc(normalBuffer, GCHandleType.Pinned);
        GCHandle colorHandle = GCHandle.Alloc(colorBuffer, GCHandleType.Pinned);
        GCHandle uvHandle = GCHandle.Alloc(uvBuffer, GCHandleType.Pinned);

        SM64MarioGeometryBuffers buff = new SM64MarioGeometryBuffers
        {
            position = posHandle.AddrOfPinnedObject(),
            normal = normHandle.AddrOfPinnedObject(),
            color = colorHandle.AddrOfPinnedObject(),
            uv = uvHandle.AddrOfPinnedObject()
        };


        sm64_mario_tick(marioId, ref inputs, ref outState, ref buff);


        numTrianglesUsed = buff.numTrianglesUsed;

        posHandle.Free();
        normHandle.Free();
        colorHandle.Free();
        uvHandle.Free();

        return outState;
    }
